--- a/main.css
+++ b/main.css
@@ -1,98 +1,56 @@
-body {
-  font-family: 'Roboto', sans-serif;
-  font-weight: 300;
-}
-
-header {
-  padding: 20px 0;
-}
-
-header .row,
-footer .row {
-  display: flex;
-  align-items: center;
-}
-
-header h1 {
-  font-weight: 700;
+html, body {
+  font-family: sans-serif;
   margin: 0;
+  width: 100%;
+  height: 100%;
 }
 
-header nav {
-  display: flex;
-  justify-content: flex-end;
+h1 {
+  font-size: 48px;
 }
 
-header p {
-  padding: 0 20px;
-  margin: 0;
+p {
+  max-width: 65%;
+  min-width: 500px;
 }
 
-.jumbotron {
-  display: flex;
-  align-items: center;
-  background-image: url('https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/jumbotron.jpg');
-  background-size: cover;
-  color: #ffffff;
-  height: 500px;
-  text-shadow: 0.25px 0.25px 0.25px #000000;
+h2 {
+  text-align: center;
+  font-size: 2.6rem;
 }
 
-.jumbotron h2 {
-  font-size: 60px;
-  font-weight: 700;
-  margin: 0;
-  color: #fff;
-}
-
-.jumbotron h3 {
-  margin: 0 0 20px;
-  color: #fff;
-}
-
-section .row img {
-  margin: 0 0 30px;
+div {
+  padding-right: 30px;
+  height: 100%;
   width: 100%;
 }
 
-.col-md-6 {
-  margin: 0 0 30px;
+video {
+  background-color: #000000;
+  border: 2px solid black;
 }
 
-.btn.btn-primary {
-  border-radius: 2px;
-  border: 0px;
-  color: #fbd1d5;
-  text-shadow: none;
-  background-color: #ffffff;
-}
-
-.btn.btn-primary:hover {
-  color: #ffffff;
-  background-color: #fbd1d5;
-}
-
-.btn-secondary {
-  background-color: #E8DFE0;
-  color: #ffffff;
-  margin: 0 0 30px;
-}
-
-footer {
-  font-size: 12px;
-  padding: 20px 0;
-}
-
-footer .col-sm-8 {
+.container {
   display: flex;
-  justify-content: flex-end;
 }
 
-footer ul {
-  list-style: none;
+.main {
+  padding-left: 30px;
+  min-width: 75%;
 }
 
-footer li img {
-  width: 32px;
-  height: 32px;
+.nav {
+  background-color: #FFEE00;
+  max-width: 25%;
+  min-width: 140px;
+  flex: 1;
 }
+
+.nav h1 {
+  padding-left: 20px;
+  font-family: Palatino, 'Palatino Linotype', serif;
+}
+
+
+
+
