--- a/main.css
+++ b/main.css
@@ -1,72 +1,46 @@
-html, body {
-  font-family: sans-serif;
-  margin: 0;
-  width: 100%;
-  height: 100%;
+body {
+	font-family: Georgia, serif;
+	height: 100%;
+	margin: 0;
+	text-align: center;
+	width: 100%;
 }
 
 h1 {
-  font-size: 48px;
-}
-
-p {
-  max-width: 65%;
-  min-width: 500px;
+	font-size: 32px;
 }
 
 h2 {
-  text-align: center;
-  font-size: 2.6rem;
+	color: #ffffff;
+	font-size: 56px; 
 }
 
-div {
-  padding-right: 100px;
-  height: 100%;
-  width: 100%;
-}
-
-video {
-  background-color: #000000;
-  border: 2px solid black;
-}
-
-.container {
-  display: flex;
-}
 
 .banner {
-  background-color: #FFEE00;
-  max-width: 25%;
-  min-width: 140px;
-  flex: 1;
-}
-
-.banner h1 {
-  padding-left: 2px;
-}
-
-.banner p {
-  font-family: Georgia, serif;
-  padding-left: 2px;
-  font-size: 10rem;
-}
-
-.main {
-  padding-left: 30px;
-  min-width: 75%;
-}
-
-.nav {
-  background-color: #FFEE00;
-  max-width: 25%;
-  min-width: 140px;
-  flex: 1;
-}
-
-.nav h1 {
-  padding-left: 2px;
+	background-image: url('https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-2/bg.jpg');
+	background-position: center top;
+	background-size: cover;
+	padding: 250px 0;
+	margin: 30px;
+	text-shadow: 0 2px #000000;
+	font-family: 'Trebuchet MS', 'Helvetica';
 }
 
 
+p {
+	color: #ffffff;
+	font-size: 2em;
+}
+
+.banner a {
+	color: #00FFAA;
+	font-size: 24px;
+	text-decoration: none;
+}
+
+#footer {
+	color: DarkSlateGray;
+	font-size: 16px;
+}
 
 
