--- a/main.css
+++ b/main.css
@@ -1,46 +1,6 @@
-body {
-	font-family: Georgia, serif;
-	height: 100%;
-	margin: 0;
-	text-align: center;
-	width: 100%;
-}
-
-h1 {
-	font-size: 32px;
-}
-
-h2 {
-	color: #ffffff;
-	font-size: 56px; 
-}
-
-
 .banner {
-  background-image: url('https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-2/bg.jpg');
-  background-position: center top;
-  background-size: cover;
-  padding: 250px 0;
-  margin: 30px;
-  text-shadow: 0 2px #000000;
-  font-family: 'Trebuchet MS', 'Helvetica';
+  background-color: #FFEE00;
+  max-width: 25%;
+  min-width: 140px;
+  flex: 1;
 }
-
-
-p {
-	color: #ffffff;
-	font-size: 2em;
-}
-
-.banner a {
-  color: #00FFAA;
-  font-size: 120px;
-  text-decoration: none;
-}
-
-#footer {
-	color: DarkSlateGray;
-	font-size: 16px;
-}
-
-
